# proxion-messenger

./: .env.example  .gitignore  ARCH.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN_ROUND_28.md  PLAN_ROUND_29.md  PLAN_ROUND_30.md  PLAN_ROUND_31.md  PLAN_ROUND_32.md  PLAN_ROUND_33.md  PLAN_ROUND_34.md  README.md  SECURITY.md  TESTING.md  build_sidecar.py  docker-compose.test.yml  forum_reply.md  run_gateway.py
proxion-messenger-core/: .gitignore  CAPABILITIES.md  README.md  pyproject.toml
proxion-messenger-core/docs/: JOURNAL_ROUNDS_10_16.md  conformance-checklist.md  mvp_critical_flows.md  ui-mapping.md
proxion-messenger-core/src/proxion_messenger_core/: _gateway_auth.py  _gateway_dm.py  _gateway_files.py  _gateway_http.py  _gateway_misc.py  _gateway_pod.py  _gateway_rooms.py  _gateway_voice.py  acp.py  attachment_crypto.py  cli.py  command_validation.py  config_verify.py  crypto.py  css_auth.py  delivery_state.py  device_cert.py  did_web.py  dpop.py  errors.py  file_transfer.py  files.py  gateway.py  handshake.py  identity.py  incident_sim.py  invitecode.py  keychain_store.py  local_store.py  (+24 more)
proxion-messenger-core/tests/: conftest.py  gwharness.py  test_backfill_idempotent.py  test_backup_restore_cli.py  test_ban_mute_federation.py  test_block_per_owner.py  test_blocklist.py  test_broadcast_scoping_guard.py  test_cert_expiry.py  test_chunked_file_transfer.py  test_cli.py  test_contact_event_scoping.py  test_cross_gateway_device_fanout.py  test_cross_gateway_dm_delete.py  test_cross_gateway_dm_edit.py  test_cross_gateway_dm_reaction.py  test_cross_gateway_file_transfer.py  test_cross_gateway_group_voice.py  test_device.py  test_device_cert.py  test_device_delegation_auth.py  test_device_e2e_keys.py  test_device_pairing_relay.py  test_device_registry_pod_sync.py  test_device_registry_roundtrip.py  test_device_revocation_hardening.py  test_did_web.py  test_disappear_scheduled_verify.py  test_dm_disappear_federation.py  test_dm_disappear_timer.py  test_dm_edit_scoping.py  test_dm_fanout_socket_delivery.py  test_dm_pin.py  test_dm_session_multi_device_restore.py  test_e2e_messaging.py  test_e2e_session_checkpoint.py  test_export.py  test_fanout_offline_queue.py  test_file_relay.py  test_files.py  (+86 more)
proxion-messenger-core/tools/: mutate.py
tauri-app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  nsis-hooks.nsh  tauri.conf.json
(+699 files in other folders)
