[package]
name = "proxion-app"
version = "0.1.3"
description = "Proxion Desktop Shell"
authors = ["Proxion Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-all", "notification-all", "system-tray", "window-all", "updater", "process-relaunch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
